<resources>
    <string name="app_name">K T U A I S</string>
    <string name="EtUserHint">Username</string>
    <string name="EtPwHint">Password</string>
    <string name="LoginBtn">Log In</string>
    <string name="week">week</string>
    <string name="login_success">Logged in</string>
    <string name="login_progress">Loading…</string>
    <string name="grades">Grades</string>
    <string name="contacts">Professors</string>
    <string name="map">Map</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="loading_new_grades">Loading new grades</string>
    <string name="received">Received:</string>
    <string name="version">Version:</string>
    <string name="input_login_infomation">Input login information.</string>
    <string name="semester">semester</string>
    <string name="autumn">Autumn</string>
    <string name="spring">Spring</string>
    <string name="current_semestras">Shown semester</string>
    <string name="update_interval_title">Update Interval</string>
    <string name="update_interval_summary">Specifies how ofter user data will be refreshed.</string>
    <string name="show_notification_title">Show Notifications</string>
    <string name="show_notification_summary">A notification will tell you about new grades.</string>
    <string name="general_settings">General Settings</string>
    <string name="cat_grades">Grades</string>
    <string name="cat_other">Other</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>

    <array name="update_interval_entries">
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hr</item>
        <item>2 hr</item>
        <item>4 hr</item>
        <item>8 hr</item>
    </array>

    <array name="update_interval_entry_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
        <item>480</item>
    </array>

</resources>
