<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="lt.welovedotnot.ktu_ais_app.views.activities.LoginActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/EtUserHint"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="152dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EtPwHint"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etUsername" />


    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/loginBtn"
        android:layout_width="214dp"
        android:layout_height="37dp"
        android:text="@string/LoginBtn"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="@string/login_success"
        custom:pb_textProgress="@string/login_progress"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        tools:layout_editor_absoluteY="327dp"
        tools:layout_editor_absoluteX="87dp" />

</android.support.constraint.ConstraintLayout>
